# openclaw

./: .gitignore  npm-shrinkwrap.json  package.json
.github/: CODEOWNERS  labeler.yml
.github/workflows/: linux-app.yml
apps/linux/: AGENTS.md  Cargo.toml  PARITY.md  README.md  SECURITY.md
apps/linux/bridge/: README.md
apps/linux/crates/bridge/: Cargo.toml
apps/linux/crates/bridge/src/: lib.rs
apps/linux/crates/capture/: Cargo.toml
apps/linux/crates/capture/src/: lib.rs  portal.rs
apps/linux/crates/node-host/: Cargo.toml
apps/linux/crates/node-host/src/: exec_socket.rs  lib.rs  system_run.rs
apps/linux/crates/openclaw-kit/: Cargo.toml
apps/linux/crates/openclaw-kit/src/: canvas_snapshot.rs  cli_install.rs  dashboard.rs  deep_links.rs  device_identity.rs  discovery.rs  exec_approvals.rs  gateway_autostart.rs  gateway_config.rs  gateway_host.rs  gateway_operator.rs  lib.rs  node_caps.rs  openclaw_config.rs  remote_tunnel.rs  tray_status.rs
apps/linux/crates/openclaw-protocol/: Cargo.toml
apps/linux/crates/openclaw-protocol/src/: client.rs  device_auth.rs  frames.rs  lib.rs  version.rs
apps/linux/crates/voice/: Cargo.toml
apps/linux/crates/voice/src/: lib.rs
apps/linux/openclaw-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/linux/openclaw-app/src-tauri/capabilities/: default.json
apps/linux/openclaw-app/src-tauri/src/: canvas.rs  desktop_integration.rs  exec_broker.rs  gateway_cli.rs  gateway_runtime.rs  lib.rs  main.rs  node_runtime.rs  pairing.rs  state.rs  voice.rs
apps/linux/openclaw-app/ui/: canvas.html  index.html  main.js  package.json  styles.css  webchat.html
apps/linux/packaging/aur/: PKGBUILD  ai.openclaw.linux.desktop  openclaw-app.desktop
apps/linux/packaging/flatpak/: ai.openclaw.linux.yml
apps/linux/tests/: README.md
extensions/canvas/: index.ts
scripts/: bundle-a2ui.mjs  linux-app-icons.sh  linux-dev.sh  linux-smoke.sh  package-linux-app.sh
src/gateway/: node-command-policy.ts
ui/: index.html
ui/src/: styles.css
ui/src/styles/: base.css  components.css  nexus-chat.css  nexus-core.css  nexus-features.css  nexus-tokens.css  nexus.css
ui/src/ui/: storage.ts  theme.test.ts  theme.ts
ui/src/ui/components/: modal-dialog.ts
ui/src/ui/views/: config-quick.ts  config.ts  overview-attention.ts  overview-cards.ts  overview-event-log.ts  overview-log-tail.ts  overview-section.test.ts  overview-section.ts  overview.ts
