[workspace]
resolver = "2"
members = [
  "crates/openclaw-protocol",
  "crates/openclaw-kit",
  "crates/node-host",
  "crates/capture",
  "crates/voice",
  "crates/bridge",
  "openclaw-app/src-tauri",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/openclaw/openclaw"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-util", "fs", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
url = "2"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
dirs = "6"
notify-rust = "4"
mdns-sd = "0.13"
zbus = { version = "5", default-features = false, features = ["tokio"] }
zbus_macros = "5"
