[package]
name = "openclaw-node-host"
description = "Unix socket exec approvals + system.run delegation for Linux app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
openclaw-kit = { path = "../openclaw-kit" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
uuid.workspace = true
dirs.workspace = true
