[package]
name = "openclaw-protocol"
description = "OpenClaw gateway WebSocket protocol (Rust)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2.workspace = true
hex.workspace = true
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
