[package]
name = "openclaw-voice"
description = "Voice wake, PTT, and talk adapters for Linux companion"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
uuid.workspace = true
dirs.workspace = true
